# fanoutqa

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  leaderboard-submission.yml  pytest.yml  pythonpublish.yml
docs/: Makefile  api_reference.rst  conf.py  index.rst  leaderboard.rst  leaderboards.md  requirements.txt
fanoutqa/: __init__.py  models.py  norm.py  retrieval.py  utils.py  wiki.py
fanoutqa/data/: LICENSE  fanout-final-test.json
fanoutqa/eval/: __init__.py  llm.py  models.py  scorer.py  string.py  utils.py
leaderboard/: README.md  index.html  package-lock.json  package.json
leaderboard-submissions/: gh-print-new-results.py  hydrate.py  webfmt.py
leaderboard-submissions/closedbook-generations/: llama33_70b_distill_ds_32k.jsonl  results-closedbook-claude-3.jsonl  results-closedbook-gemma.jsonl  results-closedbook-gpt-3.5-turbo.jsonl  results-closedbook-gpt-4.jsonl  results-closedbook-gpt-4o.jsonl  results-closedbook-gpt-oss-120b.jsonl  results-closedbook-gpt-oss-20b.jsonl  results-closedbook-llama3.jsonl  results-closedbook-mistral-large-2407.jsonl  results-closedbook-mistral-small-2409.jsonl
leaderboard-submissions/evidenceprovided-generations/: llama33_70b_distill_ds_32k.jsonl  results-wiki-provided-claude-3.jsonl  results-wiki-provided-gemma.jsonl  results-wiki-provided-gpt-3.5-turbo.jsonl  results-wiki-provided-gpt-4.jsonl  results-wiki-provided-gpt-4o.jsonl  results-wiki-provided-gpt-oss-120b.jsonl  results-wiki-provided-gpt-oss-20b.jsonl  (+3 more)
leaderboard/src/: App.vue  (+9 more)
reference/: README.md
(+94 files in other folders)
